[package]
name = "roller"
version = "0.1.0"
edition = "2021"

[lib]
name = "roller"
# "cdylib" is required for Python extension modules
# "rlib" keeps `cargo test` working for Rust unit tests
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
regex = "1"
once_cell = "1"
pyo3 = { version = "0.22", features = ["extension-module"] }