[package]
name = "roller"
version = "0.1.0"
edition = "2021"

[lib]
name = "roller"
# "cdylib" is required for Python extension modules
# "rlib" keeps `cargo test` working for Rust unit tests
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[features]
# Gate pyo3/extension-module behind a crate feature so the stub_gen binary
# can compile without it (binaries need to link libpython; extension-module
# suppresses that linkage on Linux/macOS).
extension-module = ["pyo3/extension-module"]

[dependencies]
rand = "0.8"
regex = "1"
once_cell = "1"
pyo3 = "0.22"
pyo3-stub-gen = "0.6.0"
