[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "roller"
version = "0.1.0"
description = "A fast dice roller for TTRPGs, powered by Rust"
requires-python = ">=3.8"

[tool.maturin]
# Build a pure Rust extension (no mixed Python/Rust source tree)
features = ["extension-module"]
# Bundle the generated type stub so IDEs get autocompletion
include = [{ path = "roller.pyi", format = "wheel" }]